[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airr-kaggle"
version = "0.1.0"
description = "AIRR Kaggle Solution"
readme = "README.md"
license = "MIT"
authors = [{name = "Alejandro Buendia", email = "abuen@stanford.edu"}, {name = "Chiho Im", email = "chihoim@stanford.edu"}]
requires-python = ">=3.10,<4"
dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
